src/objects/npsp__DataImport__c.object
<CustomObject>
    <fields>
        <fullName>npsp__Payment_Authorization_Token__c</fullName>
        <description>Authorization token for a transaction.</description>
        <inlineHelpText>Authorization token for a transaction.</inlineHelpText>
        <label>Payment Authorization Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Authorized_Date__c</fullName>
        <description>The date and time the transaction was authorized.</description>
        <inlineHelpText>The date and time the transaction was authorized.</inlineHelpText>
        <label>Payment Authorized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Authorized_UTC_Timestamp__c</fullName>
        <description>The exact date and time (down to the millisecond) from the payment gateway that this transaction was successfully authorized.</description>
        <inlineHelpText>The exact date and time (down to the millisecond) from the payment gateway that this transaction was successfully authorized.</inlineHelpText>
        <label>Payment Authorized UTC Timestamp</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Card_Expiration_Month__c</fullName>
        <description>The expiration month of the card used for this transaction.</description>
        <inlineHelpText>The expiration month of the card used for this transaction.</inlineHelpText>
        <label>Payment Card Expiration Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Card_Expiration_Year__c</fullName>
        <description>The expiration year of the card used for this transaction.</description>
        <inlineHelpText>The expiration year of the card used for this transaction.</inlineHelpText>
        <label>Payment Card Expiration Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Card_Last_4__c</fullName>
        <description>The last four digits of the card used for this transaction.</description>
        <inlineHelpText>The last four digits of the card used for this transaction.</inlineHelpText>
        <label>Payment Card Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Card_Network__c</fullName>
        <description>The card network of the card used for this transaction.</description>
        <inlineHelpText>The card network of the card used for this transaction.</inlineHelpText>
        <label>Payment Card Network</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Check_Reference_Number__c</fullName>
        <inlineHelpText>Payment.npe01__Check_Reference_Number__c</inlineHelpText>
        <label>Payment Check/Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Declined_Reason__c</fullName>
        <inlineHelpText>Provides detail about why a transaction was declined.</inlineHelpText>
        <label>Payment Declined Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Elevate_Created_Date__c</fullName>
        <description>The date and time the transaction was created.</description>
        <inlineHelpText>The date and time the transaction was created.</inlineHelpText>
        <label>Payment Elevate Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Elevate_Created_UTC_Timestamp__c</fullName>
        <description>The exact date and time (down to the millisecond) from Elevate that the transaction was created.</description>
        <inlineHelpText>The exact date and time (down to the millisecond) from Elevate that the transaction was created.</inlineHelpText>
        <label>Payment Elevate Created UTC  Timestamp</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Elevate_ID__c</fullName>
        <description>The unique ID for this transaction from Elevate.</description>
        <inlineHelpText>The unique ID for this transaction from Elevate.</inlineHelpText>
        <label>Payment Elevate ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Elevate_Original_Payment_ID__c</fullName>
        <description>For refunds only. Shows the ID of the original payment transaction from Elevate.</description>
        <inlineHelpText>For refunds only. Shows the ID of the original payment transaction from Elevate.</inlineHelpText>
        <label>Payment Elevate Original Payment ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Gateway_ID__c</fullName>
        <description>The ID of the payment gateway that processed this transaction.</description>
        <inlineHelpText>The ID of the payment gateway that processed this transaction.</inlineHelpText>
        <label>Payment Gateway ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Gateway_Payment_ID__c</fullName>
        <description>The unique ID for this transaction from the payment gateway.</description>
        <inlineHelpText>The unique ID for this transaction from the payment gateway.</inlineHelpText>
        <label>Payment Gateway Payment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Method__c</fullName>
        <inlineHelpText>Payment.npe01__Payment_Method__c</inlineHelpText>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Origin_ID__c</fullName>
        <description>The ID for the system where the transaction was initiated.</description>
        <inlineHelpText>The ID for the system where the transaction was initiated.</inlineHelpText>
        <label>Payment Origin ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Origin_Name__c</fullName>
        <description>The name of the system where the transaction was initiated.</description>
        <inlineHelpText>The name of the system where the transaction was initiated.</inlineHelpText>
        <label>Payment Origin Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Origin_Type__c</fullName>
        <description>The type of system used to initiate the transaction. Available values include Engagement Hub, Giving Page, Payments API, Salesforce.</description>
        <inlineHelpText>The type of system used to initiate the transaction. Available values include Engagement Hub, Giving Page, Payments API, Salesforce.</inlineHelpText>
        <label>Payment Origin Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Possible_Matches__c</fullName>
        <description>A comma-separated list of Ids for the first 10 possible Payment matches for a Donation.</description>
        <inlineHelpText>A comma-separated list of Ids for the first 10 possible Payment matches for a Donation.</inlineHelpText>
        <label>Payment Possible Matches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Status__c</fullName>
        <description>The API status of the transaction from Elevate.</description>
        <inlineHelpText>The API status of the transaction from Elevate.</inlineHelpText>
        <label>Payment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Type__c</fullName>
        <description>Indicates the type of transaction.</description>
        <inlineHelpText>Indicates the type of transaction.</inlineHelpText>
        <label>Payment Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Status__c</fullName>
        <description>The status of the import for this record, for example, Imported or Failed.</description>
        <inlineHelpText>The status of the import for this record, for example, Imported or Failed.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Imported</fullName>
                </value>
                <value>
                    <fullName>Dry Run - Validated</fullName>
                </value>
                <value>
                    <fullName>Dry Run - Error</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>NPSP Data Import</label>
    <listViews>
        <fullName>npsp__All</fullName>
        <columns>NAME</columns>
        <columns>npsp__Status__c</columns>
        <columns>npsp__FailureInformation__c</columns>
        <columns>npsp__Contact1_Firstname__c</columns>
        <columns>npsp__Contact1_Lastname__c</columns>
        <columns>npsp__Account1_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>npsp__Dry_Run_Errors</fullName>
        <columns>NAME</columns>
        <columns>npsp__Status__c</columns>
        <columns>npsp__FailureInformation__c</columns>
        <columns>npsp__Contact1_Firstname__c</columns>
        <columns>npsp__Contact1_Lastname__c</columns>
        <columns>npsp__Account1_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>npsp__Status__c</field>
            <operation>equals</operation>
            <value>Dry Run - Error</value>
        </filters>
        <label>Dry Run - Errors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>npsp__Dry_Run_Validated</fullName>
        <columns>NAME</columns>
        <columns>npsp__Status__c</columns>
        <columns>npsp__FailureInformation__c</columns>
        <columns>npsp__Contact1_Firstname__c</columns>
        <columns>npsp__Contact1_Lastname__c</columns>
        <columns>npsp__Account1_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>npsp__Status__c</field>
            <operation>equals</operation>
            <value>Dry Run - Validated</value>
        </filters>
        <label>Dry Run - Validated</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>npsp__Failed_Data_Imports</fullName>
        <columns>NAME</columns>
        <columns>npsp__Status__c</columns>
        <columns>npsp__FailureInformation__c</columns>
        <columns>npsp__Contact1_Firstname__c</columns>
        <columns>npsp__Contact1_Lastname__c</columns>
        <columns>npsp__Account1_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>npsp__Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>Failed Data Imports</label>
    </listViews>
    <listViews>
        <fullName>npsp__Succesfully_Imported</fullName>
        <columns>NAME</columns>
        <columns>npsp__Status__c</columns>
        <columns>npsp__FailureInformation__c</columns>
        <columns>npsp__Contact1_Firstname__c</columns>
        <columns>npsp__Contact1_Lastname__c</columns>
        <columns>npsp__Account1_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>npsp__Status__c</field>
            <operation>equals</operation>
            <value>Imported</value>
        </filters>
        <label>Succesfully Imported</label>
    </listViews>
    <listViews>
        <fullName>npsp__To_Be_Imported</fullName>
        <columns>NAME</columns>
        <columns>npsp__Status__c</columns>
        <columns>npsp__FailureInformation__c</columns>
        <columns>npsp__Contact1_Firstname__c</columns>
        <columns>npsp__Contact1_Lastname__c</columns>
        <columns>npsp__Account1_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>npsp__Status__c</field>
            <operation>notEqual</operation>
            <value>Imported</value>
        </filters>
        <label>To Be Imported</label>
    </listViews>
    <nameField>
        <displayFormat>DI-{000000}</displayFormat>
        <label>Data Import ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPSP Data Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>